# semantic_based_exploration

./: .clang-format  .gitmodules  .travis.yml  LICENSE  README.md  run_clang_format.sh  semantic_exploration.rosinstall  semantic_mapping_docker.sh
plotting_tools/: plot.py
rrt_explorer/: CMakeLists.txt  package.xml
rrt_explorer/include/rrt_explorer/: information_gain_average_entropy.h  information_gain_classic.h  rrt_core.h  rrt_planner.h  rrt_tree.h
rrt_explorer/launch/: exploration_planner_2.launch  mav_inspector.launch  nav_2.launch  octomap.launch  rrt_exploration.launch  rrt_exploration_sar_new.launch  rtab.launch  semantic_explorer.launch
rrt_explorer/launch/currently not used /: exploration_planner.launch  nav.launch  rrt_env.launch  rrt_env_usar.launch  rrt_exploration_main.launch  rrt_exploration_sar.launch
rrt_explorer/models/depth_camera_new/: depth_camera_new.sdf
rrt_explorer/models/girl_brunette/: model.config
rrt_explorer/models/iris_depth_camera/: iris_depth_camera.sdf
rrt_explorer/resource/: exploration.yaml  exploration_nav.yaml  semantic_exploration.yaml
rrt_explorer/rviz/: rrt_planner.rviz  rrt_planner2.rviz
rrt_explorer/scripts/: drone_control.py  object_detect.py  transform_broadcaster.py
rrt_explorer/src/: drone_commander.cpp  exploration_planner_node.cpp  exploration_planner_node_old.cpp  information_gain_base.cpp  information_gain_classic.cpp  information_gain_point_density.cpp  mesh_structure.cpp  rrt_core.cpp  rrt_navigator.cpp  rrt_navigator_px4.cpp  rrt_navigator_px4_deep.cpp  rrt_node.cpp  rrt_planner.cpp  rrt_tree.cpp
rrt_explorer/src/currently not used /: information_gain_average_entropy.cpp  main_node.cpp  rrt_node_deep.cpp  rrt_planner_deep.cpp
rrt_explorer/srv/: rrt_srv_pose.srv
rrt_explorer/worlds/: flat.world  new_world.world
semantic_exploration/: CMakeLists.txt  package.xml
semantic_exploration/config/: exploration.yaml  exploration_nav.yaml  orb_slam.yaml  px4_config.yaml  semantic_cloud.yaml  semantic_exploration.yaml  semantic_risk_exploration.yaml
semantic_exploration/include/octomap_generator/: octomap_generator.h  octomap_generator_base.h
semantic_exploration/include/semantic_exploration/: common.h  drone_commander.h  rrt_core.h  rrt_planner.h  rrt_tree.h
semantic_exploration/include/semantics_octree/: semantics_bayesian.h  semantics_max.h  semantics_octree.h  semantics_octree_node.h
semantic_exploration/include/semantics_point_type/: semantics_point_type.h
semantic_exploration/include/utilities/: time_profiler.h
semantic_exploration/launch/: semantic_explorer.launch  semantic_risk_explorer.launch  test.launch
semantic_exploration/models/bed/: model.config  model.sdf
semantic_exploration/models/burner_stove/: model.config  model.sdf
semantic_exploration/models/cabinet_ikea_malm_small/: model.config  model.sdf
semantic_exploration/models/chair_ikea_borje/: model.sdf
semantic_exploration/models/couch/: model.config  model.sdf
semantic_exploration/models/depth_camera_new/: depth_camera_new.sdf
semantic_exploration/models/electric_plug_1_M/: model.config  model.sdf
semantic_exploration/models/electric_plug_1_M_transparent/: model.sdf
semantic_exploration/models/electric_plug_1_N/: model.config  model.sdf
semantic_exploration/models/electric_plug_1_S/: model.config  model.sdf
semantic_exploration/models/electric_plug_2_M/: model.config  model.sdf
semantic_exploration/models/electric_plug_2_N/: model.config  model.sdf
semantic_exploration/models/electric_plug_2_S/: model.config  model.sdf
semantic_exploration/models/electric_plug_3_M/: model.config  model.sdf
semantic_exploration/models/electric_plug_3_N/: model.config  model.sdf
semantic_exploration/models/electric_plug_3_S/: model.config  model.sdf
semantic_exploration/models/electric_plug_4_M/: model.config  model.sdf
semantic_exploration/models/electric_plug_4_N/: model.config  model.sdf
semantic_exploration/models/electric_plug_4_S/: model.config  model.sdf
semantic_exploration/models/electric_plug_5_N/: model.config  model.sdf
semantic_exploration/models/fire_1/: model.config  model.sdf
semantic_exploration/models/fire_2/: model.config  model.sdf
semantic_exploration/models/fire_3/: model.config  model.sdf
semantic_exploration/rviz/: rrt_planner.rviz  semantic.rviz  semantic_simulation.rviz
semantic_exploration/scripts/: navigation_test.py  object_detect.py  send_transform.py  test_fov.py  transform_broadcaster.py
semantic_exploration/src/: drone_commander.cpp  exploration_node.cpp  exploration_planner_node.cpp  mesh_structure.cpp  rrt_core.cpp  rrt_node.cpp  rrt_planner.cpp  rrt_tree.cpp
semantic_exploration/srv/: GetDroneState.srv
semantic_exploration/test/: navigation.test
semantic_exploration/worlds/: collecting_test_images.world  new_world.world  simulatedworld.world  test_semantic_color.world  test_world.world  texture_world_with_objects.world  texture_world_with_objects_small.world  texture_world_with_objects_small_unique_obj.world  texture_world_with_objects_small_unique_obj_moderate_RISK3.world  texture_world_with_objects_small_unique_obj_moderate_risk1.world  texture_world_with_objects_small_unique_obj_moderate_risk2_v2.world  texture_world_with_objects_small_unique_obj_severe.world  texture_world_with_objects_small_unique_obj_severe_risk2.world  texture_world_with_objects_small_unique_obj_severe_risk3.world
usar_exploration/: CMakeLists.txt  README.md  package.xml
usar_exploration/config/: exploration.yaml
usar_exploration/launch/: exploration.launch  exploration_client.launch  exploration_px4.launch
usar_exploration/resources/: exploration.yaml  octomap_manager_params.yaml
usar_exploration/rviz/: exploration.rviz
usar_exploration/src/: current_view_extraction.cpp  current_view_srv_call.cpp  drone_commander.cpp  exploration_node.cpp  exploration_node_client.cpp  frustum_culling.cpp  occlusion_culling.cpp  occlusion_culling_test.cpp  occlusion_culling_test_with_rrt.cpp  voxblox_map_manager.cpp  voxel_grid_occlusion_estimation.cpp
usar_exploration/srv/: extractView.srv
(+86 files in other folders)
