<?xml version="1.0"?>
<package>
  <name>rrt_explorer</name>
  <version>0.0.1</version>
  <description>The rrt_explorer package</description>

  <maintainer email="tarek.taha@kustar.ac.ae">Tarek Taha</maintainer>

  <license>BDS</license>

  <author>Tarek Taha</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>octomap_world</build_depend>
  <build_depend>kdtree</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>octomap_world</run_depend>
  <run_depend>kdtree</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
