<?xml version="1.0"?>
<package>
  <name>semantic_exploration</name>
  <version>0.0.1</version>
  <description>The semantic_exploration package</description>

  <maintainer email="tarek@tarektaha.com">Tarek Taha</maintainer>
  <maintainer email="reemashour1@gmail.com">Reem Ashour</maintainer>
  <maintainer email="mohamedashraf123@gmail.com">Mohamed Abdelkader</maintainer>

  <license>BDS</license>

  <author>Tarek Taha</author>
  <author>Reem Ashour</author>
  <author>Mohamed Abdelkader</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>octomap_world</build_depend>
  <build_depend>kdtree</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>rostest</build_depend> 

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>octomap_world</run_depend>
  <run_depend>kdtree</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>octomap_msgs</run_depend>

</package>
