<?xml version="1.0"?>
<package format="2">
  <name>usar_exploration</name>
  <version>0.0.0</version>
  <description>The usar_exploration package</description>

  <maintainer email="reem.ashour@kustar.ac.ae">Reem</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>libpcl1-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>octomap_world</build_depend>


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>libpcl1-dev</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>octomap_world</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>libpcl1-dev</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>octomap_world</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>


